user profile, user changePW, pet Edit :css

--- a/src/views/css/changePassword.css
+++ b/src/views/css/changePassword.css
@@ -14,8 +14,53 @@
 .bg-circle {
   left: -100px;
   top: -100px;
+  background-color: #b8e994;
+  animation: moveCircle 30s infinite linear;
 }
 
 input::placeholder {
   color: aliceblue;
+}
+input[type="submit"] {
+  background-color: #218c74;
+}
+input[type="submit"]:hover {
+  background-color: #006266;
+}
+.bg-circle2 {
+  height: 500px;
+  width: 500px;
+  border-radius: 50%;
+  background-color: #009432;
+  position: fixed;
+  right: -200px;
+  bottom: -200px;
+  animation: moveCircle2 100s infinite linear;
+  z-index: 0;
+}
+
+@keyframes moveCircle {
+  0% {
+    transform: translate(0, -100px);
+  }
+  40% {
+    transform: translate(100px, -200px);
+  }
+  100% {
+    transform: translate(0, -100px);
+  }
+}
+@keyframes moveCircle2 {
+  0% {
+    transform: translate(0, -100px);
+  }
+  20% {
+    transform: translate(-200px, -400px);
+  }
+  60% {
+    transform: translate(-800px, 200px);
+  }
+  100% {
+    transform: translate(0, -100px);
+  }
 }
