--- a/src/views/user/changePassword.ejs
+++ b/src/views/user/changePassword.ejs
@@ -14,6 +14,7 @@
     <div class="container">
       <div class="bg-container">
         <div class="bg-circle"></div>
+        <div class="bg-circle2"></div>
       </div>
 
       <div class="form-container">
