메인 화면 거의? 완성

--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -51,7 +51,7 @@
             <span>OR</span>
             <div></div>
           </div>
-          <dir class="footer-circle-container">
+          <div class="footer-circle-container">
             <a href="/">
               <div class="footer-circle">
                 <div class="footer-circle-hover">
@@ -76,7 +76,7 @@
                 <i class="fa-solid fa-lock"></i>
               </div>
             </a>
-          </dir>
+          </div>
         </div>
       </div>
     </div>
