--- a/src/views/root/index.ejs
+++ b/src/views/root/index.ejs
@@ -4,36 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/root.css" />
+    <link rel="stylesheet" href="../css/user/header.css" />
+    <link rel="stylesheet" href="../css/user/main.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <title><%= siteName%> | Home</title>
+
   </head>
-  <body>
-    <header>
-      <h1>Home</h1>
+    <header class="header">
       <% if(loggedIn === false) { %>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/user/login">Login</a></li>
-        </ul>
-      </nav>
+          <div class="header_logo">
+            <a href="/"><h1>Petcare</h1></a>
+          </div>
+          <div class="header_gnb">
+            <ul>
+              <li><a href="/user/Login">Login</a></li>
+            </ul>
+          </div>
       <% } else { %>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/user/logout">Log out</a></li>
-          <li><a href="/pet">Pet</a></li>
-          <li><a href="/family">Family</a></li>
-          <li><a href="/iot">Iot</a></li>
-          <li><a href="/user/profile">Profile</a></li>
-        </ul>
-      </nav>
+          <div class="header_logo">
+            <a href="/"><h1>Petcare</h1></a>
+          </div>
+          <div class="header_gnb">
+            <ul>
+              <li><a href="/pet">Pet</a></li>
+              <li><a href="/iot">Iot</a></li>
+              <li><a href="/user/Profile">Profile</a></li>
+              <li><a href="/family">Family</a></li>
+              <li><a href="/user/Logout">Logout</a></li>
+            </ul>
+          </div>
       <% }%>
     </header>
-    <main></main>
-    <script
-      src="https://kit.fontawesome.com/c47a47dbc9.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <body>
+      <% if(loggedIn === false) { %>
+        <div class="container">
+          <div class="bg-container">
+            <div class="bg-circle"></div>
+            <div class="bg-circle2"></div>
+          </div>
+          <div class="form-container">
+            <div class="img-container">
+                <p class="loggedout-txtbox-in-img">로그인 이후 사용 가능합니다</p>
+                <div class="loggedout-img-inside-container">
+                  <img src="../image/unloggedinX.png">
+                </div>
+            </div>
+          </div>
+        </div>
+      <% } else { %>
+        <div class="container">
+          <div class="bg-container">
+            <div class="bg-circle"></div>
+            <div class="bg-circle2"></div>
+          </div>
+          <div class="form-container">
+            <body>
+              <div class="swiper-container mySwiper swiper-fade swiper-initialized swiper-horizontal swiper-watch-progress swiper-backface-hidden">
+                <div class="swiper-wrapper" id="swiper-wrapper-5c398eb2c4b2f6ea" aria-live="polite">
+                  <div class="swiper-slide swiper-slide-visible swiper-slide-active" role="group" aria-label="1 / 4" style="width: 815px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
+                    <img src="#"><!--사진이 들어가야함-->
+                  </div>
+                  <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 4" style="width: 815px; opacity: 0; transform: translate3d(-815px, 0px, 0px);">
+                    <img src="#"><!--사진이 들어가야함-->
+                  </div>
+                  <div class="swiper-slide" role="group" aria-label="3 / 4" style="width: 815px; opacity: 0; transform: translate3d(-1630px, 0px, 0px);">
+                    <img src="#"><!--사진이 들어가야함-->
+                  </div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 815px; opacity: 0; transform: translate3d(-2445px, 0px, 0px);">
+                    <img src="#"><!--사진이 들어가야함-->
+                  </div>
+                </div>
+                <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-5c398eb2c4b2f6ea" aria-disabled="false"></div>
+                <div class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-5c398eb2c4b2f6ea" aria-disabled="true"></div>
+                <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span></div>
+              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+          </body>
+        </div>
+      <% }%>
+      <script src="../css/pet/js/swiper.js"></script>
+    </body>
 </html>
