--- a/src/views/css/pet/view.css
+++ b/src/views/css/pet/view.css
@@ -24,6 +24,17 @@ a {
   align-items: center;
   justify-content: center;
 }
+.not-join-header-ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+}
+.not-join-header-ul li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 .container {
   position: relative;
   height: inherit;
