--- a/src/views/pet/view.ejs
+++ b/src/views/pet/view.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/root.css" />
     <link rel="stylesheet" href="../css/pet/view.css" />
+    <link rel="stylesheet" href="../css/profile.css" />
     <title>Pet Care | <%= pageTitle %>></title>
   </head>
   <body>
