메인페이지 대체사진 css 완료 / 이미지쪽 처리해줘야함

--- a/src/views/pet/view.ejs
+++ b/src/views/pet/view.ejs
@@ -60,7 +60,7 @@
                 <% } %>
               </div>
             </ul>
-            <dir class="footer-circle-container">
+            <div class="footer-circle-container">
               <a href="edit/<%= pets[i].id %>"
                 ><div class="footer-circle">
                   <div class="footer-circle-hover unregister">
@@ -75,7 +75,7 @@
                   </div>
                   <i class="fa-solid fa-x"></i></div
               ></a>
-            </dir>
+            </div>
           </div>
         </div>
 
