--- a/src/views/root/index.ejs
+++ b/src/views/root/index.ejs
@@ -75,16 +75,18 @@
               <div class="swiper-container mySwiper swiper-fade swiper-initialized swiper-horizontal swiper-watch-progress swiper-backface-hidden">
                 <div class="swiper-wrapper" id="swiper-wrapper-5c398eb2c4b2f6ea" aria-live="polite">
                   <div class="swiper-slide swiper-slide-visible swiper-slide-active" role="group" aria-label="1 / 4" style="width: 815px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-                    <img src="#"><!--사진이 들어가야함-->
+                      <a href="../pet/upload">
+                        <img src="" alt="반려동물을 등록해주세요!" width="200" height="400"><!--사진이 들어가야함-->
+                      </a>        
                   </div>
                   <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 4" style="width: 815px; opacity: 0; transform: translate3d(-815px, 0px, 0px);">
-                    <img src="#"><!--사진이 들어가야함-->
+                      <img src="#" onerror="this.onerror=null; this.src='../image/temp img1.jpg';" height="400"><!--사진이 들어가야함-->
                   </div>
                   <div class="swiper-slide" role="group" aria-label="3 / 4" style="width: 815px; opacity: 0; transform: translate3d(-1630px, 0px, 0px);">
-                    <img src="#"><!--사진이 들어가야함-->
+                      <img src="#" onerror="this.onerror=null; this.src='../image/temp img2.jpg';" height="400"><!--사진이 들어가야함-->                  
                   </div>
                   <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 815px; opacity: 0; transform: translate3d(-2445px, 0px, 0px);">
-                    <img src="#"><!--사진이 들어가야함-->
+                      <img src="#" onerror="this.onerror=null; this.src='../image/temp img3.jpg';" height="400"><!--사진이 들어가야함-->
                   </div>
                 </div>
                 <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-5c398eb2c4b2f6ea" aria-disabled="false"></div>
