--- a/src/views/css/user/main.css
+++ b/src/views/css/user/main.css
@@ -138,14 +138,17 @@ body {
 .swiper-container {
     width: 100%;
     height: 100%;
+    margin-left: 73%;
 }
 
 .swiper-slide {
     background-position: center;
     background-size: cover;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .swiper-slide img {
-    display: block;
-    width: 100%;
+    max-width: 100%;
 }
