--- a/src/views/css/user/main.css
+++ b/src/views/css/user/main.css
@@ -1,13 +1,91 @@
 * {
     box-sizing: border-box;
-    font-family: var(--ff);
-    margin:0;
-    padding:0;
-}
-body {
-    overflow: hidden;
+  }
+  body {
     height: 100vh;
-}
+  }
+  
+  nav,
+  ul {
+    height: inherit;
+  }
+  a {
+    /* color: var(--purple); */
+    color: black;
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  .header-ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .header-ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .not-join-header-ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+  }
+  .not-join-header-ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .container {
+    position: relative;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+  }
+  .bg-container {
+    position: absolute;
+    z-index: 0;
+  }
+  .header-container {
+    height: 5rem;
+    margin-top: 3.5rem;
+    position: absolute;
+    z-index: 9;
+    width: 100%;
+  }
+  .header-container a {
+    font-size: 1rem;
+    font-weight: 400;
+    transition: all ease-in-out 0.1s;
+  }
+  .header-container a:hover {
+    font-size: 1.1rem;
+    font-weight: 500;
+  }
+  
+  .home-flex-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .home-container {
+    position: absolute;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    height: 2rem;
+    background-color: #40407a;
+    border-radius: 1rem;
+    align-items: center;
+  }
+  .home-container li {
+    margin: 0 0.85rem;
+  }
+  .home-container li a {
+    color: white;
+    font-weight: 300;
+  }
 
 .container {
     height: 100%;
