--- a/src/views/family/newFamily.ejs
+++ b/src/views/family/newFamily.ejs
@@ -4,45 +4,64 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/root.css" />
+    <link rel="stylesheet" href="../css/family/view.css" />
     <title><%= siteName%> | Home</title>
   </head>
   <body>
-    <header>
-      <h1>Home</h1>
-      <% if(loggedIn === false) { %>
+    <header class="header-container">
       <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/user/login">Login</a></li>
+        <ul class="header-ul">
+          <li><a href="/user/logout">LOG OUT</a></li>
+          <li><a href="/">PET CARE</a></li>
+          <li></li>
         </ul>
       </nav>
-      <% } else { %>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/user/logout">Log out</a></li>
+      <div class="home-flex-container">
+        <div class="home-container">
           <li><a href="/pet">Pet</a></li>
-          <li><a href="/family/newFamily">Family</a></li>
-          <li><a href="/iot">Iot</a></li>
+          <li><a href="/iot">IoT</a></li>
           <li><a href="/user/profile">Profile</a></li>
-        </ul>
-      </nav>
-      <% }%>
+        </div>
+      </div>
     </header>
+    <div class="bg-container">
+      <div class="bg-circle"></div>
+      <div class="bg-circle2"></div>
+    </div>
     <main>
-      <form action="/family/new" method="POST">
-        <button type="submit">방 만들기</button>
-      </form>
-      <form action="/family/enter" method="POST">
-        <input type="text" name="familyPath" placeholder="URL" required />
-        <button type="submit">방 참가하기</button>
-      </form>
+      <div class="family-main-container">
+        <div class="user-form">
+          <h3>My room</h3>
+          <form>
+            <p id="my-own-url"><%=url%></p>
+            <button id="my-own-submit">입장</button>
+          </form>
+        </div>
+        <div class="Other-form">
+          <h3>Family room</h3>
+          <!--다른 사람 방 주소-->
+          <div>
+            <form>
+              <div id="familyTitle">타이틀</div>
+              <div id="familyPath">url</div>
+              <button id="delete-family">삭제</button>
+              <!--ejs id 추가-->
+              <button id="submit-family">입장</button>
+              <!--ejs id 추가-->
+            </form>
+          </div>
+        <!--다른 사람 방 주소 등록-->
+          <div>
+            <form>
+              <input type="text" name="familyTitle" placeholder="방이름" required />
+              <input type="text" name="familyPath" placeholder="URL" required />
+              <button type="submit">방 등록하기</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </main>
-
-    <script
-      src="https://kit.fontawesome.com/c47a47dbc9.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
