--- a/src/views/root/index.ejs
+++ b/src/views/root/index.ejs
@@ -93,7 +93,8 @@
                 <div class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-5c398eb2c4b2f6ea" aria-disabled="true"></div>
                 <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span></div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-          </body>
+            </body>
+          </div>
         </div>
       <% }%>
       <script src="../css/pet/js/swiper.js"></script>
